--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Bittersweet
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Testing
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://wx4.sinaimg.cn/mw690/007451E8gy1gvihnim626j60qo0zktg302.jpg
 
 #
 # Flags below are optional
