--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Bittersweet
 
 # Short bio or description (displayed in the header)
-description: Testing
+description: 사랑은 어쩌다 시랑이 됐을까 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://wx4.sinaimg.cn/mw690/007451E8gy1gvihnim626j60qo0zktg302.jpg
+avatar: https://pbs.twimg.com/media/E8f6xBeUcAIn6Cn?format=jpg&name=900x900
 
 #
 # Flags below are optional
