--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Bittersweet
+name: Yucheng (Karida) Huang
 
 # Short bio or description (displayed in the header)
-description: 사랑은 어쩌다 시랑이 됐을까 
+description: Learning to code 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://pbs.twimg.com/media/E8f6xBeUcAIn6Cn?format=jpg&name=900x900
