--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yucheng (Karida) Huang
 description: Learning to code 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://pbs.twimg.com/media/E8f6xBeUcAIn6Cn?format=jpg&name=900x900
+avatar: https://github.com/Matchachocolate/matchachocolate.github.io/blob/master/images/5.png?raw=true
 
 #
 # Flags below are optional
